--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^6.0.0",
-    "truffle-hdwallet-provider": "0.0.5"
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1"
   }
 }
